--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -1,7 +1,7 @@
 <head>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="index.css">
-    <script src="index.js" defer></script>
+    <link rel="stylesheet" href="bundle.css">
+    <script src="bundle.js" defer></script>
 </head>
 
 <body>
